--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,3 +1,3 @@
 <div class="video-wrap">
-  <%= video_tag 'ramen.mp4', autoplay: true, loop: true %>
+  <%= video_tag 'ramen.mp4', autoplay: true, loop: true,  muted:true %>
 </div>
