--- a/app/views/tops/show.html.erb
+++ b/app/views/tops/show.html.erb
@@ -15,7 +15,12 @@
   });
 </script>
 <div id="map" style="height: 500px; width: 50%; margin: 2rem auto 0;"></div>
-    <button id="getcurrentlocation">getcurrentlocation</button>
+    <button id="getcurrentlocation">現在地から近くのラーメン屋を検索</button>
+<div id="shoplist">
+<table id="shoplist_table">
+  <thead><th>店舗名</th></thead>
+</table>
+</div>
 
 <!-- jqueryの読み込む -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -24,3 +29,5 @@
 ></script>
 <!-- js -->
 <script src="assets/javascripts/ramen.js" async></script>
+
+<%= javascript_include_tag 'ramen.js' %>
