--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,6 +1,9 @@
+<div class="video-button">
 <div class="video-wrap">
-  <%= video_tag 'videos/ramen.mp4', autoplay: true, loop: true,  muted:true %>
+  <%= video_tag 'ramen.mp4', autoplay: true, loop: true,  muted:true %>
 </div>
 
-
-<%= link_to "Look for RAMEN", tops_ramen_path, class: 'btn btn-default' %>
+<div class="home_btn div-center">
+  <%= link_to "Look for RAMEN", tops_ramen_path, class: ' btn btn-default' %>
+</div>
+</div>
