--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,18 +14,27 @@
  */
 @import "bootstrap";
 
+.div-center{
+  text-align: center;
 
-.video-wrap {
-  position: relative;
 }
-p {
-  font-family: serif;
-  color: #fff;
-  font-size: 400%;
+.video-button{
   position: absolute;
-  left: 30%;
-  top: 200px;
+  width: 100%;
+  height: 100%;
+}
+.video-wrap {
+  position: absolute;
   z-index: 1;
+}
+.home_btn {
+  position:relative;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+margin: 30%;
+  z-index: 2;
 }
 
 
@@ -103,8 +112,9 @@ width: 50%;
   padding: 20px 0;
 }
 
-.btn btn-default {
+.btn.btn-default {
   display: inline-block;
+  font-size: 5rem;
   padding: 20px 20px;
   border: solid 2px #fff;
   border-radius: 3px;
@@ -114,7 +124,7 @@ width: 50%;
   font-weight: bold;
   font-family: Helvetica, Arial, sans-serif;
 }
-.btn btn-default:hover{
+.btn.btn-default:hover{
   color: #333;
   background: #fff;
 }
